Fix spacing in side panel not applied
This is due to justify-content being by default at flex-start so I
guess maybe it was overriding spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,6 @@ canvas:first-child {
 }
 
 body {
-    height: 100vh;
     display: flex;
     font-family: var(--main-font-family);
 }
@@ -76,6 +75,7 @@ ul {
 
 .side-panel {
     flex: auto;
+    justify-content: space-between;
 }
 
 .main-container {
@@ -148,12 +148,6 @@ label {
 
 .main-container input, .main-container button {
     background-color: var(--main-container-input-color);
-}
-
-div.canvas-scroll{
-    width: 100%;
-    height: 100%;
-    overflow: auto;
 }
 
 .invisible {
